--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,23 +2,34 @@
 @import './fonts/_cartograph-mono';
 @import './fonts/_cartograph-sans';
 @import './fonts/_font-open-iconic';
-@import './global/variable.scss';
+// @import './global/variable.scss';
 
 body {
-	font-family: 'Cartograph Sans CF';
+  font-family: 'Cartograph Sans CF';
 }
 
 @font-face {
-	font-family: 'MyFont';
-	src: url('../fonts/kinetic/HussarBoldWeb.otf') format('otf'),
-		url('../fonts/kinetic/HussarBoldWeb.woff') format('woff');
+  font-family: 'MyFont';
+  src: url('../fonts/kinetic/HussarBoldWeb.otf') format('otf'),
+    url('../fonts/kinetic/HussarBoldWeb.woff') format('woff');
 
-	font-weight: 600;
-	font-style: normal;
+  font-weight: 600;
+  font-style: normal;
 }
 
 .hello {
-	color: red;
-	font-family: 'MyFont';
-	background: url('../images/bg.jpeg');
+  // color: red;
+  // font-family: 'MyFont';
+  // background: url('../images/bg.jpeg');
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-image: url('../images/dot-pattern.png');
+    opacity: .1;
+  }
 }
