--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,18 +10,18 @@
   <h1 data-testid="h1" class="App-title">This is nice Webpack boilerplate</h1>
   <!-- This is file that will be injected with bundled scripts -->
   <nav data-testid="navbar" class="navbar" role="navigation">
-    <ul>
-      <li data-testid="nav-li" class="nav-li">
-        <a href="#">Home</a>
+    <ul class="nav">
+      <li data-testid="nav-li nav-item" class="nav-li">
+        <a class="nav-link active" href="#">Home</a>
       </li>
-      <li data-testid="nav-li" class="nav-li">
-        <a href="#">About</a>
+      <li data-testid="nav-li nav-item" class="nav-li">
+        <a class="nav-link" href="#">About</a>
       </li>
-      <li data-testid="nav-li" class="nav-li">
-        <a href="#">Portfolio</a>
+      <li data-testid="nav-li nav-item" class="nav-li">
+        <a class="nav-link" href="#">Portfolio</a>
       </li>
-      <li data-testid="nav-li" class="nav-li">
-        <a href="#">Contact</a>
+      <li data-testid="nav-li nav-item" class="nav-li">
+        <a class="nav-link" href="#">Contact</a>
       </li>
     </ul>
 
