update readme. fix tests

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,16 +11,16 @@
   <!-- This is file that will be injected with bundled scripts -->
   <nav data-testid="navbar" class="navbar" role="navigation">
     <ul class="nav">
-      <li data-testid="nav-li nav-item" class="nav-li">
+      <li data-testid="nav-li" class="nav-li nav-item">
         <a class="nav-link active" href="#">Home</a>
       </li>
-      <li data-testid="nav-li nav-item" class="nav-li">
+      <li data-testid="nav-li" class="nav-li nav-item">
         <a class="nav-link" href="#">About</a>
       </li>
-      <li data-testid="nav-li nav-item" class="nav-li">
+      <li data-testid="nav-li" class="nav-li nav-item">
         <a class="nav-link" href="#">Portfolio</a>
       </li>
-      <li data-testid="nav-li nav-item" class="nav-li">
+      <li data-testid="nav-li" class="nav-li nav-item">
         <a class="nav-link" href="#">Contact</a>
       </li>
     </ul>
