--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <h1 data-testid="h1" class="App-title">This is nice Webpack boilerplate</h1>
+  <br/>
+  <span class="oi" data-glyph="browser"></span>
   <!-- This is file that will be injected with bundled scripts -->
   <nav data-testid="navbar" class="navbar" role="navigation">
     <ul class="nav">
