--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,28 +6,78 @@
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
-  <h1 data-testid="h1" class="App-title">This is nice Webpack boilerplate</h1>
-  <br/>
-  <span class="oi" data-glyph="browser"></span>
-  <!-- This is file that will be injected with bundled scripts -->
-  <nav data-testid="navbar" class="navbar" role="navigation">
-    <ul class="nav">
-      <li data-testid="nav-li" class="nav-li nav-item">
-        <a class="nav-link active" href="#">Home</a>
-      </li>
-      <li data-testid="nav-li" class="nav-li nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-      <li data-testid="nav-li" class="nav-li nav-item">
-        <a class="nav-link" href="#">Portfolio</a>
-      </li>
-      <li data-testid="nav-li" class="nav-li nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-    </ul>
+  <div class="app">
 
-  </nav>
 
+
+    <div class="container">
+      <header class="header">
+        <div class="title-image"></div>
+
+
+        <div class="menu">
+          <ul>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Archive</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Contacts</a></li>
+          </ul>
+        </div>
+
+
+        <div class="header-title-bg-grid">
+          <p>Some text</p>
+        </div>
+      </header>
+    </div>
+
+
+
+    <div class="fuel-grid container-fluid">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="grid-item concert"></div>
+          <h3>Google - The Performing Arts</h3>
+          <p>Interactive</p>
+        </div>
+        <div class="col-md-4">
+          <div class="grid-item gti"></div>
+          <h3>Google - Inside Abbey Road</h3>
+          <p>Interactive</p>
+        </div>
+        <div class="col-md-4">
+          <div class="grid-item abbey"></div>
+          <h3>Google - Beyound the map</h3>
+          <p>Design</p>
+        </div>
+      </div>
+
+
+
+      <div class="row">
+        <div class="col-md-4">
+          <div class="grid-item inn">
+
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="grid-item favelas">
+
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="grid-item da">
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+  </div>
 </body>
 </html>
