--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,16 @@
+@import './mixins';
 @import './bootstrap/bootstrap';
 // @import './fonts/_cartograph-mono';
 @import './fonts/_cartograph-mono-light';
 // @import './fonts/_cartograph-sans';
 @import './fonts/_font-open-iconic';
+@import './components/header';
+@import './components/grid-item';
+
+
+body {
+  // height: 2000px;
+}
 
 .hello {
   position: relative;
