--- a/src/styles/bootstrap/custom-variables.scss
+++ b/src/styles/bootstrap/custom-variables.scss
@@ -14,9 +14,9 @@ $spacer: 1.25rem;
 $paragraph-margin-bottom: 0.625rem;
 $grid-gutter-width: 20px;
 
-$font-family-sans-serif:      'Cartograph Mono CF', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-$font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-$font-family-base:            $font-family-sans-serif;
+$font-family-sans-serif: 'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+$font-family-base: $font-family-sans-serif;
 
 $grid-breakpoints: (
   xs: 0,
