--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,6 +1,6 @@
 header.header {
   background-color: $white;
-  height: 60vh;
+  height: 30vh;
   margin-top: 100px;
   position: relative;
 
@@ -9,18 +9,12 @@ header.header {
   }
 
   .title-image {
-    position: relative;
-    height: 300px;
-    background-image: url('../images/title_text.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-bottom: 100px;
-  }
 
-  .header-title-bg-grid {
-    height: 100px;
-    width: 100%;
-    background-image: url('../images/dot_pattern_300.png');
+    h1 {
+      font-size: 40px;
+      line-height: 50px;
+      letter-spacing: 0.5px;
+    }
   }
 
   .menu {
@@ -47,5 +41,18 @@ header.header {
         }
       }
     }
+  }
+}
+
+.header-title-bg-grid {
+  height: 200px;
+  padding: 50px 0;
+  width: 100%;
+  background-image: url('../images/dot_pattern_300.png');
+
+  h2 {
+    font-size: 80px;
+    line-height: 100px;
+    letter-spacing: 1px;
   }
 }
