--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,9 +1,5 @@
 @import './mixins';
 @import './bootstrap/bootstrap';
-// @import './fonts/_cartograph-mono';
-@import './fonts/_cartograph-mono-light';
-// @import './fonts/_cartograph-sans';
-@import './fonts/_font-open-iconic';
 @import './components/header';
 @import './components/grid-item';
 
@@ -11,6 +7,7 @@
 body {
   &.loading {
     overflow: hidden;
+    padding-right: 1rem;
   }
 }
 
