--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page Title</title>
+
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+  <script type="text/javascript" src="https://unpkg.com/feather-icons"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -35,7 +38,7 @@
 
     <div class="header-title-bg-grid">
       <div class="container">
-        <h2>Prototyping</h2>
+        <h2 id="dynamic-text">Prototyping</h2>
       </div>
     </div>
 
@@ -105,8 +108,12 @@
     }
   </style>
   <div class="preloader">
-    <h2 class="loader-text">Loading...</h2>
+    <h2 class="loader-text"><i class="pr-2" data-feather="clock"></i>Loading...</h2>
   </div>
+
+  <script>
+     feather.replace();
+   </script>
 
 </body>
 </html>
