--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -18,9 +18,9 @@
       <header class="header">
 
         <div class="title-image">
-          <h1>Dennis Deikstra<br/>
-            Design, Develop,<br/>
-            Prototyping
+          <h1 class="title-image-text">Dennis Deikstra
+            <span class="title-image-block">Design, Develop,</span>
+            <span class="title-image-block">Prototyping</span>
           </h1>
         </div>
 
