--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,6 +14,20 @@
 <body class="loading">
   <div class="app">
 
+    <style type="text/css">
+      .test {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 10;
+        color: red;
+        font-size: 20px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+      }
+    </style>
+    <div id="test" class="test">test</div>
+
     <div class="container">
       <header class="header">
 
