Start copying picasso

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,6 +19,9 @@
         position: absolute;
         left: 0;
         top: 0;
+        height: 10px;
+        width: 0px;
+        background: #000;
         z-index: 10;
         color: red;
         font-size: 20px;
@@ -26,15 +29,16 @@
         letter-spacing: 1px;
       }
     </style>
-    <div id="test" class="test">test</div>
+    <div id="test" class="test"></div>
 
     <div class="container">
       <header class="header">
 
         <div class="title-image">
-          <h1 class="title-image-text">Dennis Deikstra
-            <span class="title-image-block">Design, Develop,</span>
-            <span class="title-image-block">Prototyping</span>
+          <h1 class="title-image-text">
+            <span class="title-image-block name">Dennis Deikstra</span>
+            <span class="title-image-block first">Design, Develop,</span>
+            <span class="title-image-block second">Prototyping</span>
           </h1>
         </div>
 
