--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -18,7 +18,7 @@
       .test {
         position: absolute;
         left: 0;
-        top: 0;
+        top: 40px;
         height: 10px;
         width: 0px;
         background: #000;
