Add ScrollMagic and plugins

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
 @import './mixins';
 @import './bootstrap/bootstrap';
 @import './components/header';
+@import './components/about';
 @import './components/grid-item';
 
 
