--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -9,6 +9,23 @@
 </head>
 
 <body>
-  <h1>About</h1>
+
+  <div class="page about container">
+
+    <section class="page-block about-header">
+      <h1>About</h1>
+      <a href="/">Home</a>
+      <hr/>
+    </section>
+
+    <section id="project01" class="page-block">
+      <h1>Project 1</h1>
+      <hr/>
+    </section>
+
+
+
+  </div>
+
 </body>
 </html>
