--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,7 +1,7 @@
 header.header {
   background-color: $white;
   height: 30vh;
-  margin-top: 100px;
+  margin-top: 200px;
   position: relative;
 
   @include media-max-width(md) {
@@ -50,6 +50,20 @@ header.header {
       }
     }
   }
+}
+
+.test {
+  position: absolute;
+  left: 0;
+  top: 40px;
+  height: 2px;
+  width: 0px;
+  background: #000;
+  z-index: 10;
+  color: red;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .header-title-bg-grid {
