--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,21 +14,6 @@
 <body class="loading">
   <div class="app">
 
-    <style type="text/css">
-      .test {
-        position: absolute;
-        left: 0;
-        top: 40px;
-        height: 10px;
-        width: 0px;
-        background: #000;
-        z-index: 10;
-        color: red;
-        font-size: 20px;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-      }
-    </style>
     <div id="test" class="test"></div>
 
     <div class="container">
@@ -36,7 +21,7 @@
 
         <div class="title-image">
           <h1 class="title-image-text">
-            <span class="title-image-block name">Dennis Deikstra</span>
+            <span class="title-image-block name">Richard Nickson</span>
             <span class="title-image-block first">Design, Develop,</span>
             <span class="title-image-block second">Prototyping</span>
           </h1>
