--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -23,6 +23,16 @@
       <hr/>
     </section>
 
+    <section id="project02" class="page-block">
+      <h1>Project 2</h1>
+      <hr/>
+    </section>
+
+    <section id="project03" class="page-block">
+      <h1>Project 3</h1>
+      <hr/>
+    </section>
+
 
 
   </div>
