--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -1,21 +1,33 @@
 .about {
 
   .page-block {
-    height: 60vh;
-    padding: 50px;
-    background-color: $gray-100;
-    margin-bottom: 50px;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+
+    img {
+      max-width: 100%;
+    }
   }
 
-  #project01 {
+  .page-block {
     position: relative;
-    opacity: 0;
-    transform: translateX(100px);
-    transition: all 1s ease-in-out;
+    filter: blur(5px);
+    transition: all .5s ease-in-out;
+
+    &.about-header {
+      transition: none;
+    }
 
     &.fade-in {
-      transform: translateX(0px);
-      opacity: 1;
+      filter: blur(0px);
+    }
+
+    .box {
+      height: 100px;
+      width: 100px;
+      background-color: $primary;
+      margin: 0 auto;
     }
   }
 
