--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -10,27 +10,29 @@
 
 <body>
 
-  <div class="page about container">
+  <div class="page about">
 
-    <section class="page-block about-header">
+    <section id="intro" class="page-block about-header fade-in">
       <h1>About</h1>
       <a href="/">Home</a>
       <hr/>
+      <img src="../images/big/Case-PerfArts-1b.jpg" alt="">
     </section>
 
-    <section id="project01" class="page-block">
-      <h1>Project 1</h1>
-      <hr/>
+    <section id="project-01" class="page-block project project-01">
+      <h1>Box 1</h1>
+      <div id="box1" class="box"></div>
+      <img src="../images/big/Case-PerfArts-2.jpg" alt="">
     </section>
 
-    <section id="project02" class="page-block">
-      <h1>Project 2</h1>
-      <hr/>
+    <section id="project-02" class="page-block project project-02">
+      <h1>Box 2</h1>
+      <div id="box2" class="box"></div>
+      <img src="../images/big/Case-PerfArts-3.jpg" alt="">
     </section>
 
-    <section id="project03" class="page-block">
-      <h1>Project 3</h1>
-      <hr/>
+    <section id="project-03" class="page-block project project-03">
+      <img src="../images/big/Case-PerfArts-4.jpg" alt="">
     </section>
 
 
