--- a/src/styles/components/grid-item.scss
+++ b/src/styles/components/grid-item.scss
@@ -44,6 +44,10 @@
     opacity: .8;
   }
 
+  &.exteme-wave {
+    background-image: url('../images/Slide_01/thumbnail.png');
+  }
+
   &.concert {
     background-image: url('../images/thumbnails/Case-PerfArts-tb2c.png');
   }
