--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,7 @@
 @import './components/header';
 @import './components/about';
 @import './components/grid-item';
+@import './components/project-details';
 
 
 body {
