--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -48,9 +48,11 @@
     <div class="fuel-grid container-fluid">
       <div class="row">
         <div class="col-md-4">
-          <div class="grid-item concert"></div>
-          <h3>Google - The Performing Arts</h3>
-          <p>Interactive</p>
+          <a href="/project-extreme-wave.html">
+            <div class="grid-item exteme-wave"></div>
+            <h3>Google - The Performing Arts</h3>
+            <p>Interactive</p>
+          </a>
         </div>
         <div class="col-md-4">
           <div class="grid-item gti"></div>
