--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,6 +5,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Page Title</title>
 
+  <style>
+
+    .preloader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-image: url('../images/dot_pattern_300.png');
+      display: flex;
+    }
+
+    .preloader .loader-text {
+      font-family: 'Lato' sans-serif;
+      margin: auto;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+  </style>
+
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
   <script type="text/javascript" src="https://unpkg.com/feather-icons"></script>
 
@@ -50,8 +73,8 @@
         <div class="col-md-4">
           <a href="/project-extreme-wave.html">
             <div class="grid-item exteme-wave"></div>
-            <h3>Google - The Performing Arts</h3>
-            <p>Interactive</p>
+            <h3>Extreme Waves</h3>
+            <p>Web design</p>
           </a>
         </div>
         <div class="col-md-4">
@@ -89,29 +112,6 @@
 
   </div>
 
-
-  <style>
-
-    .preloader {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-image: url('../images/dot_pattern_300.png');
-      display: flex;
-    }
-
-    .preloader .loader-text {
-      font-family: 'Lato' sans-serif;
-      margin: auto;
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 20px;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-    }
-  </style>
   <div class="preloader">
     <h2 class="loader-text"><i class="pr-2" data-feather="clock"></i>Loading...</h2>
   </div>
