--- a/src/templates/project-extreme-wave.html
+++ b/src/templates/project-extreme-wave.html
@@ -27,6 +27,9 @@
       <img class="image" src="../images/Slide_01/slide_04.png" alt="">
     </div>
     <div class="images-container">
+      <img class="image" src="../images/Slide_01/slide_06.png" alt="">
+    </div>
+    <div class="images-container">
       <img class="image" src="../images/Slide_01/slide_05.png" alt="">
     </div>
   </div>
